[gd_scene load_steps=4 format=3 uid="uid://i3fcdwqk28sb"]

[ext_resource type="Script" path="res://Scripts/timer.gd" id="1_yofb1"]
[ext_resource type="FontFile" uid="uid://c2dxgn8247omg" path="res://Fonts/Kanit-Italic.ttf" id="2_45pqh"]

[sub_resource type="LabelSettings" id="LabelSettings_shvlp"]
font = ExtResource("2_45pqh")
font_size = 40
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="EndTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1120.0
offset_bottom = -656.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yofb1")

[node name="EndTimer" type="Timer" parent="."]
autostart = true

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 64.0
text = "15:00"
label_settings = SubResource("LabelSettings_shvlp")
horizontal_alignment = 1

[connection signal="timeout" from="EndTimer" to="." method="_on_timer_timeout"]
